refactor(device): update entity manipulation handlers and argument access
- Replace args.get(0) with args.getFirst() for consistent argument access
- Remove unused LargeBall firework shape case from switch statement
- Remove unnecessary .value() calls when accessing WenyanDouble types
- Use Math.clamp instead of manual min/max for flight duration calculation
- Change ENTITY_MANIPULATION_PACKAGE to use underscore for unused parameters
- Add explanatory comment for small context handler purpose